force-app/main/default/objects/conference360__Session_Speaker__c/conference360__Session_Speaker__c.object-meta.xml
<CustomObject>
    <label>Session Speaker</label>
    <nameField>
        <displayFormat>SSP-{000000}</displayFormat>
        <label>Session Speaker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Speakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>