force-app/main/default/objects/conference360__Session_Speaker__c/fields/conference360__Session__c.field-meta.xml
<CustomField>
    <fullName>conference360__Session__c</fullName>
    <label>Session</label>
    <referenceTo>conference360__Session__c</referenceTo>
    <relationshipLabel>Session Speakers</relationshipLabel>
    <relationshipName>Session_Speakers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>