force-app/main/default/objects/conference360__Session_Speaker__c/fields/conference360__Speaker__c.field-meta.xml
<CustomField>
    <fullName>conference360__Speaker__c</fullName>
    <label>Speaker</label>
    <referenceTo>conference360__Speaker__c</referenceTo>
    <relationshipLabel>Session Speakers</relationshipLabel>
    <relationshipName>Session_Speakers1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>