force-app/main/default/objects/conference360__Session_Speaker__c/fields/conference360__Speaker_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Speaker_Name__c</fullName>
    <formula>conference360__Speaker__r.conference360__First_Name__c &amp;&quot; &quot;&amp;conference360__Speaker__r.conference360__Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speaker Name</label>
    <type>Text</type>
</CustomField>